--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.13.4",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
-    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.18.0",
     "next": "^16.1.6",
     "next-themes": "^0.2.1",
     "postcss": "^8.5.3",
@@ -22,12 +22,10 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-international-phone": "^4.7.0",
-    "react-leaflet": "^5.0.0",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.8.9",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.0",
