--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.2.4",
     "react-international-phone": "^4.7.0",
     "socket.io-client": "^4.8.3",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
