--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-international-phone": "^4.7.0",
+    "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.3",
     "zod": "^4.3.6"
